Débogage affichage de la facture d un acte

--- a/templates/acte/edit.html.twig
+++ b/templates/acte/edit.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Acte{% endblock %}
+{% block title %}Modifier Acte{% endblock %}
 
 {% block body %}
-    <h1>Edit Acte</h1>
+    <h1>Modifier Acte</h1>
 
     
     {{ include('acte/_form.html.twig', {'button_label': 'Update'}) }}
