--- a/templates/acte/new.html.twig
+++ b/templates/acte/new.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Acte{% endblock %}
+{% block title %}Nouveau Acte{% endblock %}
 
 {% block body %}
-    <h1>Create new Acte</h1>
+    <h1>Créer un acte</h1>
 
     {{ include('acte/_form.html.twig') }}
     <a href="{{ path('patient_index') }}">retour à la liste</a>
