--- a/templates/acte/show.html.twig
+++ b/templates/acte/show.html.twig
@@ -29,7 +29,7 @@
         <a href="{{ path('facture_new', {'acte_id': acte.id}) }}">
                                                                Créer facture</a>
     {% else %}
-        <a href="{{ path('facture_index', {'acte_id': acte.id}) }}">
+        <a href="{{ path('facture_acte', {'acte_id': acte.id}) }}">
                                                                 Voir facture</a>
    {% endif %}
    
