--- a/templates/facture/edit.html.twig
+++ b/templates/facture/edit.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Facture{% endblock %}
+{% block title %}Modifier Facture{% endblock %}
 
 {% block body %}
-    <h1>Edit Facture</h1>
+    <h1>Modifier Facture</h1>
     
     <a href="{{ path('patient_index') }}">retour à la liste</a>
 
