--- a/templates/facture/new.html.twig
+++ b/templates/facture/new.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Facture{% endblock %}
+{% block title %}Créer Facture{% endblock %}
 
 {% block body %}
-    <h1>Create new Facture</h1>
+    <h1>Créer Facture</h1>
 
     {{ include('facture/_form.html.twig') }}
 <a href="{{ path('patient_index') }}">retour à la liste</a>
