--- a/templates/facture/show.html.twig
+++ b/templates/facture/show.html.twig
@@ -37,7 +37,7 @@
     
     <a href="{{ path('patient_index') }}">retour à la liste</a>
 
-    <a href="{{ path('facture_edit', {'id': facture.id}) }}">edit</a>
+    <a href="{{ path('facture_edit', {'id': facture.id}) }}">Modifier</a>
 
     {{ include('facture/_delete_form.html.twig') }}
 {% endblock %}
