--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -14,13 +14,15 @@
     Suivi des patients dématérialisé :
     <ul>
         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-            <li><a href="{{ path('app_logout') }}">Se déconnecter</a></li>
             <li><a href="{{ path('patient_index') }}">
                                                      Liste des patients</a></li>
             {% if is_granted('ROLE_PRATICIEN') %}
                 <li><a href="{{ path('patients_debiteurs') }}">
                                            Liste des patients débiteurs</a></li>
+                <li><a href="{{ path('chiffre_affaire') }}">
+                                                      Chiffre d'affaire</a></li>
             {% endif %}
+            <li><a href="{{ path('app_logout') }}">Se déconnecter</a></li>
         {% else %}
             <li><a href="{{ path('app_login') }}">Se connecter</a></li>
         {% endif %}
