--- a/templates/patient/edit.html.twig
+++ b/templates/patient/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Patient{% endblock %}
+{% block title %}Modifier Patient{% endblock %}
 
 {% block body %}
     <h1>Modifier Patient</h1>
