--- a/templates/facture/new.html.twig
+++ b/templates/facture/new.html.twig
@@ -6,5 +6,6 @@
     <h1>Créer Facture</h1>
 
     {{ include('facture/_form.html.twig') }}
-<a href="{{ path('patient_index') }}">retour à la liste</a>
+<a href="{{ path('patient_index') }}" class="w3-btn w3-margin w3-black">
+                                                           retour à la liste</a>
 {% endblock %}
