--- a/templates/patient/_form.html.twig
+++ b/templates/patient/_form.html.twig
@@ -3,6 +3,7 @@
     {{ form_row(form.nom, {'attr': {'class': 'w3-input'}}) }}
     {{ form_row(form.prenom, {'attr': {'class': 'w3-input'}}) }}
     {{ form_row(form.adresse, {'attr': {'class': 'w3-input'}}) }}
+    {{ form_row(form.tel, {'attr': {'class': 'w3-input'}}) }}
     {{ form_widget(form) }}
     <button class="w3-btn w3-blue-gray w3-margin">{{ button_label|default('Enregistrer') }}</button>
 {{ form_end(form) }}
